@@ -44,4 +44,4 @@ check-UUID: true
 
 ### Config version ###
 #Do not modify this, otherwise plugin may not work properly
-v: Alpha0.2.2
+v: Alpha0.2.3
