@@ -1,5 +1,8 @@
 Changelog of Jail
 
+Alpha0.2.3
+- Fixed '/votejail' command not working for normal players
+
 Alpha0.2.2
 - Added an option to disable timer GUI on prisoners in config
 - Updated README.md for Github
